--- a/contactus.html
+++ b/contactus.html
@@ -21,7 +21,9 @@
 
     <!-- Template Style -->
     <link rel="stylesheet" href="css\style.css">
-
+<style>
+.connecthover:hover {background:#3a4269; color:#fff;}    
+</style>
   </head>
   <body>
 
@@ -108,12 +110,12 @@
             </ul>
           </div>
           <a class="btn btn-primary btn-md mr-5 mr-xl-0 d-none d-sm-block" href="#"> Get a quote </a>
+          <a style="margin-left:15px; margin-left: 15px; background: #43508e; border: #43508e;" class="btn btn-primary btn-md mr-5 mr-xl-0 d-none d-sm-block connecthover" href="#"> Connect your server </a>
         </div>
       </nav>
     </header>
     <!--=================================
     Header -->
-
     
 
   <!--=================================
