--- a/contactus.html
+++ b/contactus.html
@@ -18,7 +18,42 @@
     <link rel="stylesheet" href="css\font-awesome\all.min.css">
     <link rel="stylesheet" href="css\flaticon\flaticon.css">
     <link rel="stylesheet" href="css\bootstrap\bootstrap.min.css">
+<!-- Start GEOtargeted Javascript-React-VueJS-Angular Translation -->
+<style>
+		.skiptranslate {display:none !important;}
+		.custom-cursor {top: 0px !important;}
+		font {font-family: Raleway !important;}
+	    .goog-text-highlight {
+        background-color: transparent !important;
+        -webkit-box-shadow: 2px 2px 4px transparent !important;
+        -moz-box-shadow: 2px 2px 4px transparent !important;
+         box-shadow: 2px 2px 4px transparent !important;
+        }
+        .nav-link font {font-size:12px !important;}
+		</style>
+<div style="display:none !important;" id="google_translate_element2"></div>
+<script type="text/javascript">
+function googleTranslateElementInit2() {new google.translate.TranslateElement({pageLanguage: 'en',autoDisplay: false}, 'google_translate_element2');}
+</script><script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
 
+
+<script type="text/javascript">
+/* <![CDATA[ */
+eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('6 7(a,b){n{4(2.9){3 c=2.9("o");c.p(b,f,f);a.q(c)}g{3 c=2.r();a.s(\'t\'+b,c)}}u(e){}}6 h(a){4(a.8)a=a.8;4(a==\'\')v;3 b=a.w(\'|\')[1];3 c;3 d=2.x(\'y\');z(3 i=0;i<d.5;i++)4(d[i].A==\'B-C-D\')c=d[i];4(2.j(\'k\')==E||2.j(\'k\').l.5==0||c.5==0||c.l.5==0){F(6(){h(a)},G)}g{c.8=b;7(c,\'m\');7(c,\'m\')}}',43,43,'||document|var|if|length|function|GTranslateFireEvent|value|createEvent||||||true|else|doGTranslate||getElementById|google_translate_element2|innerHTML|change|try|HTMLEvents|initEvent|dispatchEvent|createEventObject|fireEvent|on|catch|return|split|getElementsByTagName|select|for|className|goog|te|combo|null|setTimeout|500'.split('|'),0,{}))
+/* ]]> */
+</script>
+
+<script>
+if (navigator.language == 'fr') { 
+   let s = document.createElement('script'); 
+   s.src='//ask-karin.com/assets/translationtargeted.js'; 
+   document.head.appendChild(s); 
+}
+</script>
+<!-- End GEOtargeted Javascript-React-VueJS-Angular Translation -->
+<style>
+body {top:0px !important;}
+</style>
     <!-- Template Style -->
     <link rel="stylesheet" href="css\style.css">
 <style>
@@ -96,17 +131,7 @@
                 
               </li>
 	
-              <li class="dropdown nav-item header-search">
-                <div class="search">
-                  <a class="search-btn not_click" href="javascript:void(0);"></a>
-                  <div class="search-box not-click">
-                    <form action="search.html" method="get">
-                      <input type="text" class="not-click form-control" name="search" placeholder="Search..">
-                      <button class="search-button" type="submit"> <i class="fa fa-search not-click"></i></button>
-                    </form>
-                  </div>
-                </div>
-              </li>
+             
             </ul>
           </div>
           <a class="btn btn-primary btn-md mr-5 mr-xl-0 d-none d-sm-block" href="#"> Get a quote </a>
@@ -124,7 +149,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 pr-md-5 border-right border-md-none">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d7584023.55044353!2d-102.24334!3d21.85227!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1582704197431!5m2!1sen!2sus" style="border:0; width: 100%; height: 300px;" allowfullscreen=""></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6686241.169921118!2d-84.35271361353344!3d35.08757412025959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88541fc4fc381a81%3A0xad3f30f5e922ae19!2sNorth%20Carolina%2C%20USA!5e0!3m2!1sen!2sma!4v1589421721969!5m2!1sen!2sma" style="border:0; width: 100%; height: 300px;" allowfullscreen=""></iframe>
         </div>
         <div class="col-md-4 pl-md-5 mt-md-0 mt-4">
           <h6 class="mb-4"><strong> Get in touch with us</strong></h6>
