--- a/contactus.html
+++ b/contactus.html
@@ -46,7 +46,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a
 <script>
 if (navigator.language == 'fr') { 
    let s = document.createElement('script'); 
-   s.src='//ask-karin.com/assets/translationtargeted.js'; 
+   s.src='js/translationtargeted.js'; 
    document.head.appendChild(s); 
 }
 </script>
