--- a/aboutus.html
+++ b/aboutus.html
@@ -57,6 +57,84 @@ if (navigator.language == 'fr') {
 <style>
 body {top:0px !important;}
 </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+<style>
+.xwrap {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-flow: column;
+}
+:root {
+  --select-input: 15rem;
+  --select-menu: 16.2rem;
+}
+.select__wrapper {
+  position: relative;
+}
+.select__label {
+  position: absolute;
+  top: -1.5rem;
+  left: 2px;
+}
+.select__input {
+  width: var(--select-input);
+  height: 2.2rem;
+  background: rgb(22, 21, 23) !important;
+  border: none;
+  color:#fff !important;
+  border-radius:5px;
+  padding: 0 0.5rem;
+  cursor: pointer;
+}
+.select__input:focus {
+  color:#fff !important;
+}
+.select__input:active {
+  color:#fff !important;
+}
+.select__icon {
+  position: absolute;
+  right: 0.7rem;
+  top: 0.7rem;
+  cursor: pointer;
+}
+.select__menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 0;
+  background-color: #1e1d23;
+  min-width: 8.2rem;
+  z-index: 1;
+  max-height: var(--select-input);
+  overflow: auto;
+  height: 0;
+  top:-98px;
+  width: 56px !important;
+  -webkit-transition: all 0.33s;
+  transition: all 0.33s;
+  cursor: pointer;
+}
+.select__menu-item {
+  line-height: 1.5rem;
+  padding-left: 18px;
+  padding-top: 8px;
+  padding-bottom: 8px !important;
+  -webkit-transition: all 0.33s;
+  transition: all 0.33s;
+}
+.select__menu-item:hover {
+  background: transparent;
+}
+</style>
     <!-- Template Style -->
     <link rel="stylesheet" href="css\style.css">
 <style>
@@ -499,9 +577,23 @@ body {top:0px !important;}
       <div class="footer-bottom">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
-              <p class="mb-0 text-white"> &copy; Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="index.html"> ITIBMS </a> All Rights Reserved </p>
-            </div>
+            <div style="display:flex;" class="col-md-6">
+              <p class="mb-0 text-white" style="
+    width: max-content;
+    display: inline-block; margin-right: 33px;
+"> &copy; Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="index.html"> ITIBMS </a> All Rights Reserved </p>
+            <div class="select__wrapper" data-select="kubernetes" style="
+    top: -5px;
+">
+  <input class="select__input" type="text" style="
+    width: 132px;
+" placeholder="Language"/><i class="select__icon fa fa-caret-down" style="display: none;" aria-hidden="true"></i>
+  <ul class="select__menu" style="width: 8.2rem !important;">
+    <li class="select__menu-item"><a onclick="doGTranslate('fr|en')">English</a></li>
+    <li class="select__menu-item notranslate"><a onclick="doGTranslate('en|fr')">Français</a></li>
+  </ul>
+</div>
+			</div>
             <div class="col-md-6  mt-2 mt-md-0 copyright text-md-right">
               LABIDA Sponsored Company
             </div>
@@ -535,6 +627,40 @@ body {top:0px !important;}
 
   <!-- Template Scripts (Do not remove)-->
   <script src="js\custom.js"></script>
-
+<script>
+"use strict";
+var $ = function (selector) {
+    return document.querySelector(selector);
+};
+var $$ = function (selector) {
+    return document.querySelectorAll(selector);
+};
+// -
+var select = function (name) {
+    var selectName = ".select__wrapper[data-select=" + name + "]";
+    var input = $(selectName + " .select__input");
+    var icon = $(selectName + " .select__icon");
+    var menu = $(selectName + " .select__menu");
+    var menuItem = $$(".select__wrapper[data-select=" + name + "] .select__menu-item");
+    input.onclick = function () {
+        icon.classList.remove('fa-caret-down');
+        icon.classList.add('fa-caret-up');
+        menu.style.height = 'auto';
+        menu.style.boxShadow = '0px 8px 12px 2px rgba(0, 0, 0, .2)';
+    };
+    [].forEach.call(menuItem, function (item) {
+        item.onclick = function () {
+            input.value = item.textContent;
+            icon.classList.remove('fa-caret-up');
+            icon.classList.add('fa-caret-down');
+            menu.style.height = '0';
+            menu.style.width = '0';
+            menu.style.boxShadow = 'none';
+        };
+    });
+};
+select('kubernetes');
+select('frameworks');
+</script>
 </body>
 </html>
