--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ body {top:0px !important;}
     <p>Cybersecurity researchers from ESET on Thursday said they took down a portion of a malware botnet comprising at least 35,000 compromised Windows systems that attackers were secretly using to mine Monero cryptocurrency.</p><a href="#" class="read-more">Read More</a>
   </figcaption>
 </figure>
-<figure class="snip1360"><img src="iùages/money.jpg" alt="News3" />
+<figure class="snip1360"><img src="images/money.jpg" alt="News3" />
   <figcaption>
     <h2>Hackers Trick 3 British Private Equity Firms Into Sending Them $1.3 Million</h2>
     <p>In a recent highly targeted BEC attack, hackers managed to trick three British private equity firms into wire-transferring a total of $1.3 million to the bank accounts fraudsters have access to —thought they closed an investment deal with some startups.</p><a href="#" class="read-more">Read More</a>
